--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -181,7 +181,7 @@
                             <label for="playerTelHome">{{'playerLabels.playerTelHome' | translate }}</label>
                         </div>
                         <div class="input-field col m4 s8">
-                            <input id="playerTelMobile" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}" 
+                            <input id="playerTelMobile" type="tel" ui-mask="{{'commons.format.phone.pattern' | translate }}" 
                                    class="validate" min="0" ng-model="player.contact.home">
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
@@ -193,7 +193,7 @@
                             <label for="playerTelMobile">{{'playerLabels.playerTelMobile' | translate }}</label>
                         </div>
                         <div class="input-field col m4 s8">
-                            <input id="playerTelMobile" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}"
+                            <input id="playerTelMobile" type="tel" ui-mask="{{'commons.format.phone.pattern' | translate }}"
                                    class="validate" min="0" ng-model="player.contact.cellphone">
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
