--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -158,10 +158,11 @@
             </div>
         </div>
 
-        <div class="modal-footer">
-            <button type="submit" class="waves-effect waves-red btn green darken-1" translate="commons.buttons.validate"/>
-            <a href="#/" class="modal-action modal-close waves-effect waves-red btn red">{{'commons.buttons.cancel' |
-                translate}}</a>
+        <div class="row center">
+            <div class="col s12">
+                <a href="#/" class="modal-action modal-close waves-effect waves-red btn red" translate="commons.buttons.cancel"></a>
+                <button type="submit" class="btn waves-effect waves-red  green darken-1" translate="commons.buttons.validate"/>
+            </div>
         </div>
     </form>
 </div>
