--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -34,7 +34,7 @@
                         </select>
                     </div>
                     <div class="input-field col s12 m6">
-                        <input id="eventLabel" type="text" ng-model="event.Label" required>
+                        <input id="eventLabel" type="text" ng-model="event.label" required>
                         <label for="eventLabel">{{'eventLabels.Label' | translate }} <span class="red-text text-lighten-1">*</span></label>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                         </select>
                     </div>
 
-                    <div class="input-field col s12 m6" ng-if="chooseAdversary">
+                    <div class="input-field col s12 m6" ng-show="chooseAdversary">
                         <select class="browser-default blue-grey-text text-darken-1" ng-model="adversaryId" required id="adversary">
                             <option value="" disabled selected>{{'eventLabels.Adversary' | translate }}</option>
                             <option ng-repeat="p in listTeamAdversary" value="{{p._id}}">{{p.label}}</option>
@@ -80,14 +80,14 @@
                         <label>{{'eventLabels.EndDate' | translate }}</label>
                     </div>
                     <div class="input-field col s8 m4">
-                       <input ng-model="endDate" id="EventEndDate" type="date">
+                       <input ng-model="endDate" id="EventEndDate" type="date" required>
                     </div>
 
                     <div class="input-field col s4 m2">
                         <label>{{'eventLabels.EndHour' | translate }}</label>
                     </div>
                     <div class="input-field col s8 m4">
-                       <input ng-model="endHours" id="EventEndHours" type="time">
+                       <input ng-model="endHours" id="EventEndHours" type="time" required>
                     </div>
                 </div>
             </div>
