--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -24,34 +24,54 @@
     
     <div class="row">
         <form class="col s12" ng-submit="checkAndformatEvent()" name="eventForm">
-            <div class="card-panel">
+            <!-- Planning-->
+            <div class="card-panel"> 
                 <div class="row">
-                    <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionIdentity' | translate }}</h6>
-                    <div class="input-field col s12 m6">
-                        <select class="browser-default blue-grey-text text-darken-1" ng-model="event.link.type" required id="EventType" ng-change="changeEventType()">
-                            <option value="" disabled selected>{{'eventLabels.Type' | translate }}</option>
-                            <option ng-repeat="p in listEventType" value="{{p.code}}">{{p.label}}</option>
-                        </select>
+                    <div class="col m6 s12">
+                        <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionPlaning' | translate }}</h6>
+                        <div class="input-field col s4">
+                            <label>{{'eventLabels.StartDate' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                        </div>
+                        <div class="input-field col s8">
+                           <input ng-model="startDate" id="EventStartDate" type="date" class="datepicker" required>
+                        </div>
+
+                        <div class="input-field col s4">
+                            <label>{{'eventLabels.StartHour' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                        </div>
+                        <div class="input-field col s8">
+                           <input ng-model="startHours" id="EventStartHours" type="time" required>
+                        </div>
                     </div>
-                    <div class="input-field col s12 m6">
-                        <input id="eventLabel" type="text" ng-model="event.label" required>
-                        <label for="eventLabel">{{'eventLabels.Label' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                    <!-- EventType -->
+                    <div class="col m6 s12">
+                        <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionIdentity' | translate }}</h6>
+                        <div class="input-field col s12">
+                            <input id="eventLabel" type="text" ng-model="event.label">
+                            <label for="eventLabel">{{'eventLabels.Label' | translate }}</label>
+                        </div>
+                        <div class="input-field col s12">
+                            <select class="browser-default blue-grey-text text-darken-1" ng-model="event.link.type" required id="EventType" ng-change="changeEventType()">
+                                <option value="" disabled selected>{{'eventLabels.Type' | translate }}</option>
+                                <option ng-repeat="p in listEventType" value="{{p.code}}">{{p.label}}</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
-            
-            <div class="card-panel">                        
+            <!-- Participants -->
+            <div class="card-panel grey lighten-3" ng-show="chooseAdversary">                        
                 <div class="row">
                     <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionActors' | translate }}</h6>
                     <div class="input-field col s12 m6">
-                        <select class="browser-default blue-grey-text text-darken-1" ng-model="teamId" required id="team">
+                        <select class="browser-default blue-grey-text text-darken-1" ng-model="teamId" id="team">
                             <option value="" disabled selected>{{'eventLabels.Team' | translate }}</option>
                             <option ng-repeat="p in listTeamHome" value="{{p._id}}">{{p.label}}</option>
                         </select>
                     </div>
 
-                    <div class="input-field col s12 m6" ng-show="chooseAdversary">
-                        <select class="browser-default blue-grey-text text-darken-1" ng-model="adversaryId" required id="adversary">
+                    <div class="input-field col s12 m6">
+                        <select class="browser-default blue-grey-text text-darken-1" ng-model="adversaryId" id="adversary">
                             <option value="" disabled selected>{{'eventLabels.Adversary' | translate }}</option>
                             <option ng-repeat="p in listTeamAdversary" value="{{p._id}}">{{p.label}}</option>
                         </select>
@@ -59,39 +79,7 @@
                 </div>
             </div>
             
-            <div class="card-panel"> 
-                <div class="row">
-                    <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionPlaning' | translate }}</h6>
-                    <div class="input-field col s4 m2">
-                        <label>{{'eventLabels.StartDate' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                    </div>
-                    <div class="input-field col s8 m4">
-                       <input ng-model="startDate" id="EventStartDate" type="date" class="datepicker" required>
-                    </div>
-
-                    <div class="input-field col s4 m2">
-                        <label>{{'eventLabels.StartHour' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                    </div>
-                    <div class="input-field col s8 m4">
-                       <input ng-model="startHours" id="EventStartHours" type="time" required>
-                    </div>
-
-                    <div class="input-field col s4 m2">
-                        <label>{{'eventLabels.EndDate' | translate }}</label>
-                    </div>
-                    <div class="input-field col s8 m4">
-                       <input ng-model="endDate" id="EventEndDate" type="date" required>
-                    </div>
-
-                    <div class="input-field col s4 m2">
-                        <label>{{'eventLabels.EndHour' | translate }}</label>
-                    </div>
-                    <div class="input-field col s8 m4">
-                       <input ng-model="endHours" id="EventEndHours" type="time" required>
-                    </div>
-                </div>
-            </div>
-            
+            <!-- Localisation-->
             <div class="card-panel"> 
                 <div class="row">
                     <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionPlace' | translate }}</h6>
@@ -102,7 +90,7 @@
                     <div class="input-field col m4 s8">
                         <input type="text" id="formatedAddress" ng-autocomplete ng-model="event.address.formatedAddress" details="detailsAdr" options="optionsAdr" placeholder=""/>
                     </div>
-                    
+
                     <div class="input-field col m6 s12 center-align">
                         <input name="location" class="with-gap" checked="checked" type="radio" id="home" 
                                value="home" ng-model="location"/>
