--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -8,7 +8,7 @@
             <a href="#/private" class="red-text text-lighten-1"><i class="material-icons">people</i></a>
         </div>
         <div class="col s8 center-align">
-            <div><h5 class="light-green-text text-lighten-1" style="font-size:18px;">{{currentEffective.label}} - {{currentEffective.categoryAge.label}} </h5></div>
+            <div><h5 class="light-green-text text-lighten-1" style="font-size:18px;">{{'mainEffective.title' | translate }} {{currentEffective.label}}</h5></div>
         </div>
         
         <div class="col s2">
@@ -37,27 +37,6 @@
             </p>
             <p ng-show="effectives.length < 2">&nbsp;</p>
         </div>
-        
-         <!-- filter -->
-        <div class="col s12">
-            <form class="forms forms-inline input-field">
-                <input type="text" id="query" class="grey lighten-4" ng-model="query">
-                <label for="query">Filter</label>
-            </form>
-        </div>   
-        <div class="col s12">    
-            <ul class="collection">
-                <li class="collection-item avatar col s12" ng-repeat="player in players | filter:query">
-                    <simple-avatar person="player" link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
-                    <a href="#/private/viewPlayer/{{player._id}}" class="title red-text text-lighten-1" style="font-size:15px;">{{player.firstname}} {{player.name}}</a>
-                    <a href="#/private/statPlayer/{{player._id}}" class="waves-effect waves-light white red-text text-lighten-1 right"><i class="material-icons small">insert_chart</i></a>
-                    <p style="font-size:10px;">
-                        {{player.age}} {{'commons.format.ageYear' | translate }} - 
-                        {{player.status.height}} {{'commons.format.height' | translate }} / {{player.status.weight}} {{'commons.format.weight' | translate }}
-                    </p>
-                </li>
-            </ul>
-        </div>
     </div>
     
     
@@ -70,7 +49,7 @@
             </a>
         </div>
         <div class="col s5">
-            <div><h5 class="light-green-text text-lighten-1">{{currentEffective.label}} - {{currentEffective.categoryAge.label}} </h5></div>
+            <div><h5 class="light-green-text text-lighten-1">{{'mainEffective.title' | translate }} {{currentEffective.label}}</h5></div>
         </div>
         
         <!-- effective list -->
@@ -81,7 +60,7 @@
             </li>
         </ul>
         
-        <div class="col s3">
+        <div class="col s4">
             <p ng-show="effectives.length > 1">
             <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="mainEffectiveList">
                 {{'mainEffective.buttons.dropdownEffective' | translate }} &nbsp;&nbsp;&nbsp;&nbsp;
@@ -92,46 +71,147 @@
         </div>
         
         <div class="col s1 right-align">    
-            <a href="#/private/addEffective/{{meta._id}}" class="red-text text-lighten-1 center tooltipped" 
+            <a href="#/private/addEffective/{{meta._id}}" class="red-text text-lighten-1 tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.addEffective' | translate }}">
                     <i class="material-icons small">group_add</i>
             </a>
         </div>
         <div class="col s1 right-align">
-            <a href="#/private/updateEffective/{{currentEffective._id}}" class="red-text text-lighten-1 center tooltipped" 
+            <a href="#/private/updateEffective/{{currentEffective._id}}" class="red-text text-lighten-1 tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.updateEffective' | translate }}">
                     <i class="material-icons small">mode_edit</i>
             </a>
         </div>
-        <div class="col s1 right-align">
-            <a href="#/private/addPlayer/{{meta._id}}" class="red-text text-lighten-1 center tooltipped" 
-               data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.addPlayer' | translate }}">
-                    <i class="material-icons small">person_add</i>
-            </a>
-        </div>
-    
-        <!-- filter -->
+    </div>
+        
+    <div class="row">
         <div class="col s12">
-            <form class="forms forms-inline input-field">
-                <input type="text" id="query" class="grey lighten-4" ng-model="query">
-                <label for="query">Filter</label>
-            </form>
-        </div>   
-        <div class="col s12">    
-            <ul class="collection">
-                <li class="collection-item avatar col s12" ng-repeat="player in players | filter:query">
-                    <simple-avatar person="player" link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
-                    <a href="#/private/viewPlayer/{{player._id}}" class="title red-text text-lighten-1">{{player.firstname}} {{player.name}}</a> 
-                    <span class="title  hide-on-small-only">{{player.positionType}}</span>
-                    <p>
-                        {{player.age}} {{'commons.format.ageYear' | translate }} - 
-                        {{player.status.height}} {{'commons.format.height' | translate }} / {{player.status.weight}} {{'commons.format.weight' | translate }}
-                    </p>
-                    <a href="#/private/statPlayer/{{player._id}}" class="secondary-content btn-floating waves-effect waves-light red lighten-1">
-                        <i class="fa fa-bar-chart" ></i>
-                    </a>
-                </li>
+            <ul class="tabs" tabs>
+                <li class="tab col s6 "><a href="#playerList" class="red-text text-lighten-1">{{'effectiveLabels.effectiveTabMembers' | translate }}</a></li>
+                <li class="tab col s6 "><a href="#teamList" class="red-text text-lighten-1">{{'effectiveLabels.effectiveTabTeams' | translate }}</a></li>
             </ul>
+        </div>
+
+        <!-- List player -->
+        <div id="playerList" class="col s12">
+
+            <!-- filter -->
+            <div class="col s12">
+                <form class="forms forms-inline input-field">
+                    <input type="text" id="queryPlayer" class="grey lighten-4" ng-model="queryPlayer">
+                    <label for="queryPlayer">Filter</label>
+                </form>
+            </div>
+            <div class="col s12 left-align">
+                <a href="#/private/addPlayer/{{meta._id}}" class="red-text text-lighten-1 tooltipped" data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.addPlayer' | translate }}">
+                    <i class="fa fa-user-plus fa-2x"></i>
+                </a>
+            </div>
+            <div class="col s12">    
+                <ul class="collection">
+                    <li class="collection-item avatar col s12" ng-repeat="player in players | filter:queryPlayer">
+                        <simple-avatar person="player" link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
+                        <a href="#/private/viewPlayer/{{player._id}}" class="title red-text text-lighten-1">{{player.firstname}} {{player.name}}</a> 
+                        <span class="title  hide-on-small-only">{{player.positionType}}</span>
+                        <p>
+                            {{player.age}} {{'commons.format.ageYear' | translate }} - 
+                            {{player.status.height}} {{'commons.format.height' | translate }} / {{player.status.weight}} {{'commons.format.weight' | translate }}
+                        </p>
+                        <a href="#/private/statPlayer/{{player._id}}" class="secondary-content btn-floating waves-effect waves-light red lighten-1">
+                            <i class="fa fa-bar-chart" ></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- List team -->
+        <div id="teamList" class="col s12">
+            <div class="col s12">&nbsp;</div>
+            
+            <!-- List team home -->
+            <div class="col s11 grey lighten-4 blue-grey-text text-darken-2">
+                <h5>{{'effectiveLabels.effectiveTeamsHome' | translate }}</h5>
+            </div>
+            <div class="col s1 grey lighten-4">
+                <a href="#/private/addPlayer/{{meta._id}}" class="red-text text-lighten-1 left-align tooltipped" data-position="left" data-delay="20" data-tooltip="{{'mainEffective.buttons.addTeamHome' | translate }}">
+                    <h5><i class="fa fa-plus-square-o"></i></h5>
+                </a>
+            </div>
+            
+            <div class="col s12">    
+                <ul>
+                    <li class="col m3 s12" ng-repeat="team in listTeamHome">
+                        <!-- enable -->
+                        <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===true">
+                            <div class="card-content red lighten-1 white-text center">
+                                <span class="card-title">{{team.label}}</span>
+                            </div>
+                            <div class="card-content">
+                                <p>{{'effectiveLabels.effectiveTeamEnable' | translate }}</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#/private/updateTeam/{{team._id}}" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
+                                <a href="#/private/statTeam/{{team._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                            </div>
+                        </div>
+                        <!-- disable -->
+                        <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===false">
+                            <div class="card-content grey lighten-1 blue-grey-text text-darken-2 center">
+                                <span class="card-title">{{team.label}}</span>
+                            </div>
+                            <div class="card-content">
+                                <p>{{'effectiveLabels.effectiveTeamNotEnable' | translate }}</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#/private/updateTeam/{{team._id}}" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
+                                <a href="#/private/statTeam/{{team._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            
+            <!-- List team adversary -->
+            <div class="col s11 grey lighten-4 blue-grey-text text-darken-2">
+                <h5>{{'effectiveLabels.effectiveTeamsAdversary' | translate }}</h5>
+            </div>
+            <div class="col s1 grey lighten-4">
+                <a href="#/private/addPlayer/{{meta._id}}" class="red-text text-lighten-1 left-align tooltipped" data-position="left" data-delay="20" data-tooltip="{{'mainEffective.buttons.addTeamAdversary' | translate }}">
+                    <h5><i class="fa fa-plus-square-o"></i></h5>
+                </a>
+            </div>
+            
+            <div class="col s12">    
+                <ul>
+                    <li class="col m3 s12" ng-repeat="team in listTeamAdversary">
+                        <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===true">
+                            <div class="card-content blue lighten-2 white-text center">
+                                <span class="card-title samll">{{team.label}}</span>
+                            </div>
+                            <div class="card-content">
+                                <p>{{'effectiveLabels.effectiveTeamEnable' | translate }}</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#/private/updateTeam/{{team._id}}" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
+                                <a href="#/private/statTeam/{{team._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                            </div>
+                        </div>
+                        <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===false">
+                            <div class="card-content grey lighten-1 blue-grey-text text-darken-2 center">
+                                <span class="card-title">{{team.label}}</span>
+                            </div>
+                            <div class="card-content">
+                                <p>{{'effectiveLabels.effectiveTeamNotEnable' | translate }}</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#/private/updateTeam/{{team._id}}" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
+                                <a href="#/private/statTeam/{{team._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     
