Gestion perte session

--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -18,7 +18,7 @@
                         <div class="col m3 s12">
                             <div class="row blue-grey-text text-darken-2 left-align"><h5>{{'playerLabels.playerCivilSection' | translate }}</h5></div>
                             <div class="row"><div class="divider red lighten-1"></div></div>
-                            <div class="row blue-grey-text text-darken-2 left-align">{{player.age}} {{'commons.format.ageYear' | translate }} - {{player.nationality.label}}</div>
+                            <div class="row blue-grey-text text-darken-2 left-align">{{player.age}} {{'commons.format.ageYear' | translate }} - {{player.nationality}}</div>
                         </div>
                         <div class="col m1 hide-on-small-only">&nbsp;</div>
                         <div class="col m3 s12">
