--- a/src/app/modules/sandbox/effective/writeEffective.html
+++ b/src/app/modules/sandbox/effective/writeEffective.html
@@ -50,8 +50,8 @@
                     <div class="col s12">
                         <ul class="collection with-header">
                             <li class="collection-header blue-grey-text text-darken-2">
-                                <h5 class="task-card-title"> 
-                                    {{'effectiveLabels.effectiveMembers' | translate }}
+                                <h5 class="card-title"> 
+                                    {{'effectiveLabels.effectiveTabMembers' | translate }}
                                 </h5>
                                 <span class="small right-align">{{selectedPlayers.length}} {{'effectiveLabels.effectiveNbPlayers' | translate }}</span>
                                 <div class="input-field">
