Module Effective et Agenda V0.01

--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -73,13 +73,13 @@
         <div class="col s1 right-align">    
             <a href="#/private/addEffective/{{meta._id}}" class="red-text text-lighten-1 tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.addEffective' | translate }}">
-                    <i class="material-icons small">group_add</i>
+                    <i class="fa fa-plus-square-o fa-3x"></i>
             </a>
         </div>
         <div class="col s1 right-align">
             <a href="#/private/updateEffective/{{currentEffective._id}}" class="red-text text-lighten-1 tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.updateEffective' | translate }}">
-                    <i class="material-icons small">mode_edit</i>
+                    <i class="fa fa-pencil-square-o  fa-3x"></i>
             </a>
         </div>
     </div>
