--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -63,18 +63,30 @@
             <div class="card-panel grey lighten-3" ng-show="chooseAdversary">                        
                 <div class="row">
                     <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionActors' | translate }}</h6>
-                    <div class="input-field col s12 m6">
+                    <div class="input-field col s10 m5">
                         <select class="browser-default blue-grey-text text-darken-1" ng-model="teamId" id="team">
                             <option value="" disabled selected>{{'eventLabels.Team' | translate }}</option>
                             <option ng-repeat="p in listTeamHome" value="{{p._id}}">{{p.label}}</option>
                         </select>
                     </div>
+                    <div class="input-field col s2 m1">
+                        <a href="#/private/addTeam/{{false}}" class="red-text text-lighten-1 left-align tooltipped" 
+                           data-position="left" data-delay="20" data-tooltip="{{'mainEffective.buttons.addTeamHome' | translate }}">
+                            <h5><i class="fa fa-plus-square-o"></i></h5>
+                        </a>
+                    </div>
 
-                    <div class="input-field col s12 m6">
+                    <div class="input-field col s10 m5">
                         <select class="browser-default blue-grey-text text-darken-1" ng-model="adversaryId" id="adversary">
                             <option value="" disabled selected>{{'eventLabels.Adversary' | translate }}</option>
                             <option ng-repeat="p in listTeamAdversary" value="{{p._id}}">{{p.label}}</option>
                         </select>
+                    </div>
+                    <div class="input-field col s2 m1">
+                        <a href="#/private/addTeam/{{true}}" class="red-text text-lighten-1 left-align tooltipped" 
+                           data-position="left" data-delay="20" data-tooltip="{{'mainEffective.buttons.addTeamAdversary' | translate }}">
+                            <h5><i class="fa fa-plus-square-o"></i></h5>
+                        </a>
                     </div>
                 </div>
             </div>
